--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <title>Contact Torben ‍💻🕹🌌🍜🐈</title>
 </head>
 
-<body style=" background-color: #6C6962; font-family:monospace;">
+<body>
 
   <h1>Contact</h1>
   <p>
