--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Hobbies</title>
   </head>
-  <body style=" background-color: #6C6962;font-family:monospace;">
+  <body>
     <h3>Hobbys</h3>
     <ol>
       <li>Fitness & Laufen</li>
